--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MindValley</string>
+    <string name="title_text">Channels</string>
+    <string name="episode_text">New Episodes</string>
+    <string name="category_header_text">Browse by categories</string>
 </resources>
